--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
     "bcrypt": "^3.0.6",
     "finalhandler": "^1.1.2",
     "find-my-way": "^2.2.1",
+    "generic-errors": "^2.1.0",
     "lokijs": "^1.5.7",
     "mathjs": "^6.2.3",
-    "raw-body": "^2.4.1",
     "serve-static": "^1.14.1",
     "sqlite3": "^4.1.0",
     "tape": "^4.11.0",
