--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "generic-errors": "^2.1.0",
     "lokijs": "^1.5.7",
     "mathjs": "^6.2.3",
+    "mkdirp": "^0.5.1",
     "righto": "^6.0.1",
     "serve-static": "^1.14.1",
     "sqlite3": "^4.1.0",
