--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node index",
-    "test": "tape test/**-test.js"
+    "test": "node test"
   },
   "author": "",
   "license": "ISC",
