--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "generic-errors": "^2.1.0",
     "lokijs": "^1.5.8",
     "mathjs": "^6.2.3",
+    "mkdirp": "^0.5.1",
     "serve-static": "^1.14.1",
+    "sqlite-fp": "^1.2.0",
     "sqlite3": "^4.1.0",
     "tape": "^4.11.0",
     "uuid": "^3.3.3"
