--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "axios": "^0.19.0",
     "bcrypt": "^3.0.6",
+    "error-with-object": "^1.1.0",
     "finalhandler": "^1.1.2",
     "find-my-way": "^2.2.1",
     "generic-errors": "^2.1.0",
