Remove parseJsonBody promise; Use writeResponse library;

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "sqlite-fp": "^1.2.0",
     "sqlite3": "^4.1.0",
     "tape": "^4.11.0",
-    "uuid": "^3.3.3"
+    "uuid": "^3.3.3",
+    "write-response": "^1.2.0"
   }
 }
