--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^0.19.0",
     "bcrypt": "^3.0.6",
     "error-with-object": "^1.1.0",
+    "final-stream": "^1.0.2",
     "finalhandler": "^1.1.2",
     "find-my-way": "^2.2.1",
     "generic-errors": "^2.1.0",
