Save c8 to dev dependencies

--- a/package.json
+++ b/package.json
@@ -26,5 +26,8 @@
     "tape": "^4.11.0",
     "uuid": "^3.3.3",
     "write-response": "^1.2.0"
+  },
+  "devDependencies": {
+    "c8": "^6.0.1"
   }
 }
