--- a/package.json
+++ b/package.json
@@ -11,15 +11,15 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.19.0",
-    "bcrypt": "^3.0.6",
     "error-with-object": "^1.1.0",
     "final-stream": "^1.0.2",
     "finalhandler": "^1.1.2",
     "find-my-way": "^2.2.1",
     "generic-errors": "^2.1.0",
-    "lokijs": "^1.5.8",
     "mathjs": "^6.2.3",
     "mkdirp": "^0.5.1",
+    "pbkdf2-wrapper": "^1.2.1",
+    "presh": "git+https://github.com/KoryNunn/presh.git#v2",
     "serve-static": "^1.14.1",
     "sqlite-fp": "^1.2.0",
     "sqlite3": "^4.1.0",
