--- a/package.json
+++ b/package.json
@@ -1,33 +1,27 @@
 {
-  "name": "app",
+  "name": "bitabase-server",
   "version": "1.0.0",
-  "description": "",
+  "description": "Provides a REST data server database via http(s)",
   "main": "index.js",
   "scripts": {
     "start": "node index",
     "test": "c8 -o /tmp node test"
   },
-  "author": "",
-  "license": "ISC",
+  "license": "AGPL-3.0",
   "dependencies": {
-    "axios": "^0.19.0",
     "error-with-object": "^1.1.0",
     "final-stream": "^1.0.2",
-    "finalhandler": "^1.1.2",
     "find-my-way": "^2.2.1",
-    "generic-errors": "^2.1.0",
-    "mathjs": "^6.2.3",
     "mkdirp": "^0.5.1",
     "pbkdf2-wrapper": "^1.2.1",
     "presh": "git+https://github.com/KoryNunn/presh.git#v2",
-    "serve-static": "^1.14.1",
     "sqlite-fp": "^1.2.0",
-    "sqlite3": "^4.1.0",
-    "tape": "^4.11.0",
     "uuid": "^3.3.3",
     "write-response": "^1.2.0"
   },
   "devDependencies": {
+    "axios": "^0.19.0",
+    "tape": "^4.11.0",
     "c8": "^6.0.1"
   }
 }
