--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "final-stream": "^1.0.2",
     "find-my-way": "^2.2.1",
     "mkdirp": "^0.5.1",
+    "mongo-sql": "^6.2.0",
     "pbkdf2-wrapper": "^1.2.1",
     "presh": "git+https://github.com/KoryNunn/presh.git#v2",
     "sqlite-fp": "^1.2.0",
