--- a/package.json
+++ b/package.json
@@ -9,20 +9,20 @@
   },
   "license": "AGPL-3.0",
   "dependencies": {
-    "callarest": "^1.6.0",
+    "callarest": "^2.0.0",
     "error-with-object": "^1.1.0",
     "final-stream": "^1.1.0",
-    "find-my-way": "^2.2.2",
-    "mkdirp": "^0.5.5",
+    "find-my-way": "^3.0.1",
+    "mkdirp": "^1.0.4",
     "mongo-sql": "^6.2.0",
     "pbkdf2-wrapper": "^1.3.1",
     "presh": "git+https://github.com/KoryNunn/presh.git#v2",
-    "sqlite-fp": "^1.2.0",
-    "uuid": "^3.4.0",
-    "write-response": "^1.2.0"
+    "sqlite-fp": "^2.0.0",
+    "uuid": "^8.1.0",
+    "write-response": "^1.2.2"
   },
   "devDependencies": {
-    "tape": "^4.11.0",
-    "c8": "^6.0.1"
+    "c8": "^7.1.2",
+    "tape": "^5.0.0"
   }
 }
