Change config to bind; Add debugging;

--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
   },
   "devDependencies": {
     "c8": "^7.1.2",
-    "tape": "^5.0.0"
+    "clarify": "^2.1.0",
+    "tape": "^5.0.0",
+    "trace": "^3.1.1"
   }
 }
