--- a/package.json
+++ b/package.json
@@ -13,10 +13,10 @@
     "error-with-object": "^1.1.0",
     "final-stream": "^1.1.0",
     "find-my-way": "^3.0.1",
+    "markwylde-presh": "^1.7.3",
     "mkdirp": "^1.0.4",
     "mongo-sql": "^6.2.0",
     "pbkdf2-wrapper": "^1.3.1",
-    "presh": "git+https://github.com/KoryNunn/presh.git#v2",
     "sqlite-fp": "^2.0.0",
     "uuid": "^8.1.0",
     "write-response": "^1.2.2"
