--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "license": "AGPL-3.0",
   "dependencies": {
-    "callarest": "^2.0.0",
+    "callarest": "^2.0.1",
     "chalk": "^4.1.0",
     "error-with-object": "^1.1.0",
     "final-stream": "^1.1.0",
@@ -22,17 +22,18 @@
     "mkdirp": "^1.0.4",
     "mongo-sql": "^6.2.0",
     "pbkdf2-wrapper": "^1.3.1",
+    "righto": "^6.1.2",
     "rqlite-fp": "^2.9.0",
-    "sqlite-fp": "^2.0.0",
-    "uuid": "^8.1.0",
+    "sqlite-fp": "^2.1.0",
+    "uuid": "^8.2.0",
     "write-response": "^1.2.2"
   },
   "devDependencies": {
     "async-bugs": "^1.1.0",
-    "c8": "^7.1.2",
+    "c8": "^7.2.0",
     "clarify": "^2.1.0",
     "nodemon": "^2.0.4",
-    "tape": "^5.0.0",
+    "tape": "^5.0.1",
     "trace": "^3.1.1"
   }
 }
